# cmdbox

./: README.md  a2as.yaml  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: request.md
Specifications/: README.md  cli-command-specifications.json
Specifications/cli/a2asv/: start.md  stop.md
Specifications/cli/agent/: agent_del.md  agent_list.md  agent_load.md  agent_save.md  chat.md  mcp_client.md  mcp_proxy.md  mcpsv_del.md  mcpsv_list.md  mcpsv_load.md  mcpsv_save.md  memory_del.md  memory_list.md  memory_load.md  memory_save.md  memory_status.md  runner_del.md  runner_list.md  runner_load.md  runner_save.md  session_del.md  session_list.md
Specifications/cli/audit/: createdb.md  delete.md  search.md  write.md
Specifications/cli/client/: file_copy.md  file_download.md  file_list.md  file_mkdir.md  file_move.md  file_remove.md  file_rmdir.md  file_upload.md  http.md  server_info.md  time.md
Specifications/cli/cmd/: list.md  load.md
Specifications/cli/cmdbox/: down.md  exec.md  load.md  logs.md  pgsql_install.md  pgsql_load.md  reboot.md  redis_install.md  redis_load.md  save.md  server_install.md  server_load.md  uninstall.md  up.md
Specifications/cli/edge/: config.md  start.md
Specifications/cli/embed/: del.md  embedding.md  list.md  load.md  save.md  start.md  stop.md
Specifications/cli/excel/: cell_details.md  cell_search.md  cell_values.md  sheet_list.md
Specifications/cli/extract/: chunklet.md  del.md  list.md  load.md  pdfplumber.md  save.md
Specifications/cli/gui/: start.md  stop.md
Specifications/cli/llm/: chat.md  del.md  list.md  load.md  save.md
Specifications/cli/mcpsv/: start.md  stop.md
Specifications/cli/omni/: pred.md
Specifications/cli/rag/: build.md  del.md  list.md  load.md  regist.md  save.md  search.md
Specifications/cli/server/: list.md  start.md  stop.md
Specifications/cli/test/: gen_cli_spec.md  gen_test_spec.md  run_spec.md
Specifications/cli/tts/: install.md  list.md  say.md  uninstall.md
Specifications/cli/web/: apikey_add.md  apikey_del.md  gencert.md  genpass.md  group_add.md  group_del.md  group_edit.md  group_list.md  start.md  stop.md  user_add.md  user_del.md  user_edit.md  user_list.md
Specifications_forUnitTest/: README.md  cli-unit-test-specifications.json
Specifications_forUnitTest/cli/a2asv/: start.md  stop.md
Specifications_forUnitTest/cli/agent/: agent_del.md  agent_list.md  agent_load.md  agent_save.md  chat.md  mcp_client.md  mcp_proxy.md  mcpsv_del.md  mcpsv_list.md  mcpsv_load.md  mcpsv_save.md  memory_del.md  memory_list.md  memory_load.md  memory_save.md  memory_status.md  runner_del.md  runner_list.md  runner_load.md  runner_save.md  session_del.md  session_list.md
Specifications_forUnitTest/cli/audit/: createdb.md  delete.md  search.md  write.md
Specifications_forUnitTest/cli/client/: file_copy.md  file_download.md  file_list.md  file_mkdir.md  file_move.md  file_remove.md  file_rmdir.md  file_upload.md  http.md  server_info.md  time.md
Specifications_forUnitTest/cli/cmd/: list.md  load.md
Specifications_forUnitTest/cli/cmdbox/: down.md  exec.md  load.md  logs.md  pgsql_install.md  pgsql_load.md  reboot.md  redis_install.md  redis_load.md  save.md  server_install.md  server_load.md  uninstall.md  up.md
Specifications_forUnitTest/cli/edge/: config.md  start.md
Specifications_forUnitTest/cli/embed/: del.md  embedding.md  list.md  load.md  save.md  start.md  stop.md
Specifications_forUnitTest/cli/excel/: cell_details.md  cell_search.md  cell_values.md  sheet_list.md
Specifications_forUnitTest/cli/extract/: chunklet.md  del.md  list.md  load.md  pdfplumber.md  save.md
Specifications_forUnitTest_results/: ERRORS.md  README.md  test-run-errors.json  test-run-results.json
cmdbox/: __init__.py  __main__.py  autoload.py  config.yml  logconf_agent.yml  logconf_audit.yml  logconf_client.yml  logconf_cmdbox.yml  logconf_edge.yml  logconf_gui.yml  logconf_mcp.yml  logconf_server.yml  logconf_web.yml  version.py
cmdbox/app/: a2a.py  app.py  client.py  common.py  edge.py  feature.py  filer.py  lib_license_list.txt  mcp.py  options.py  server.py  web.py
cmdbox/app/auth/: signin.py  (+5 more)
cmdbox/docker/: Dockerfile
cmdbox/extensions/: features.yml  user_list.yml
cmdbox/licenses/: files.txt
cmdbox/web/: agent.html  assets_license_list.txt  audit.html  filer.html  gui.html  limiter.html  result.html  signin.html  users.html
cmdbox_test/: README.md  conftest.py
cmdbox_test/app/: test_common.py  test_edge.py  test_filer.py  test_mcp.py  test_options.py  test_server.py  test_web.py
docs/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree
docs/_modules/: index.html
docs/_sources/: index.rst.txt
docs/_static/: documentation_options.js  documentation_options.js-DESKTOP-U8D57MA
docs/docs/: audit.html  authentication.html  cmd_a2asv.html  cmd_agent.html  cmd_audit.html  cmd_client.html  cmd_cmd.html  cmd_cmdbox.html  cmd_common.html  cmd_datasource.html  cmd_edge.html  cmd_embed.html  cmd_excel.html  cmd_extract.html  cmd_gui.html  cmd_limiter.html  cmd_llm.html  cmd_mcp.html  cmd_mcpsv.html  cmd_omni.html  cmd_rag.html  cmd_server.html  cmd_test.html  cmd_tts.html  cmd_web.html  command.html  developer.html  errors.html  features.html  install.html  license.html  limiter.html  tts.html  tutorial.html
docs/resources/: cmdbox.app.auth.html  cmdbox.app.html  cmdbox.html  index.html
docs_src/: conf.py  index.rst
docs_src/docs/: audit.rst  authentication.rst  cmd_a2asv.rst  cmd_agent.rst  cmd_audit.rst  cmd_client.rst  cmd_cmd.rst  cmd_cmdbox.rst  cmd_common.rst  cmd_edge.rst  cmd_excel.rst  cmd_extract.rst  cmd_gui.rst  cmd_limiter.rst  cmd_llm.rst  cmd_mcp.rst  cmd_mcpsv.rst  cmd_omni.rst  cmd_rag.rst  cmd_server.rst  cmd_test.rst  cmd_tts.rst  cmd_web.rst  command.rst  developer.rst  features.rst  install.rst  tts.rst  tutorial.rst
docs_src/resources/: cmdbox.app.rst  cmdbox.rst  conf.py  index.rst
docs_src/static/: orverview.drawio
(+477 files in other folders)
